# Raveland

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
demo/: app.js  index.html  styles.css
scripts/: macos_clear_quarantine.sh  macos_make_installer_pkg.sh  macos_sign_and_notarize.sh
source/: FancyKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SampleLayer.h  SynthVoice.cpp  SynthVoice.h  WaveformDisplay.h
